[FIX]修改z-index

--- a/react/containers/components/c7n/tools/tab-page/style/PageWrap.less
+++ b/react/containers/components/c7n/tools/tab-page/style/PageWrap.less
@@ -15,7 +15,7 @@
     position: absolute;
     top: 64px;
     width: calc(~"100% - 48px");
-    z-index: 1;
+    z-index: 2;
     margin-left: 24px;
     margin-right: 24px;
   }
@@ -32,7 +32,7 @@ body[data-theme="theme4"] {
     > .c7n-tabs-bar {
       top: 68px !important;
       background: white;
-      z-index: 1;
+      z-index: 3;
     }
   }
 }
